[gd_scene load_steps=2 format=3 uid="uid://dwm5t8llhjurm"]

[ext_resource type="Script" uid="uid://ckt2mpi5vyduk" path="res://level_hud.gd" id="1_ivury"]

[node name="LevelHUD" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_ivury")

[node name="ScoreText" type="Label" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 129.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="HealthText" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -191.0
offset_top = 8.0
offset_right = -22.0
offset_bottom = 53.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Health: 0/0"
horizontal_alignment = 2

[node name="DeathScreen" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.523
anchor_top = 0.454
anchor_right = 0.523
anchor_bottom = 0.454
offset_left = -149.496
offset_top = -100.192
offset_right = 137.504
offset_bottom = 101.808
grow_horizontal = 2
grow_vertical = 2

[node name="DeathText" type="Label" parent="DeathScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.5
offset_right = 71.5
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "You died!"

[node name="Respawn" type="Button" parent="DeathScreen"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 78.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Respawn"

[node name="Main Menu" type="Button" parent="DeathScreen"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Main Menu"

[node name="ScoreText" type="Label" parent="DeathScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.5
offset_top = 50.0
offset_right = 71.5
offset_bottom = 95.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Score: 0"
horizontal_alignment = 1

[node name="WinScreen" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.523
anchor_top = 0.454
anchor_right = 0.523
anchor_bottom = 0.454
offset_left = -149.496
offset_top = -100.192
offset_right = 137.504
offset_bottom = 101.808
grow_horizontal = 2
grow_vertical = 2

[node name="WinText" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.5
offset_right = 71.5
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "You win!"

[node name="ScoreText" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.5
offset_top = 50.0
offset_right = 71.5
offset_bottom = 95.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Score: 0"
horizontal_alignment = 1

[node name="PlayAgain" type="Button" parent="WinScreen"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 78.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Play Again"

[node name="Main Menu" type="Button" parent="WinScreen"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Main Menu"

[connection signal="pressed" from="DeathScreen/Respawn" to="." method="_on_respawn_pressed"]
[connection signal="pressed" from="DeathScreen/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="WinScreen/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="WinScreen/Main Menu" to="." method="_on_main_menu_pressed"]
